[package]
name = "hecto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
regex = "1.10.2"
termion = "2.0.3"
unicode-segmentation = "1.10.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
